Merge: combine backend Cognito integration with UI developer's improvements
BACKEND (USER):
- Auth.tsx: Cognito signUp/signIn/getCurrentUser with comprehensive error logging
- Assistant.tsx: JWT token extraction and Bearer token formatting
- App.tsx: Amplify.configure() at startup (line 15)
- All 6 Lambda functions preserved in /lambda/ directory
- aws-exports.ts with complete AWS credentials

FRONTEND (UI DEV):
- 3 new screens: MedicationForm.tsx, Notifications.tsx, ProfileEdit.tsx
- 4 new contexts: MedicationsContext, NotificationsContext, ProfileContext, ThemeContext
- App.tsx: All providers wrapped (Theme → Notifications → Medications → Profile)
- Shell component routing all 13 screens
- Button UI improvements merged with Cognito logic

MERGE DETAILS:
- Resolved Auth.tsx: Kept Cognito API calls + error logging, merged UI button fixes
- Resolved App.tsx: Merged all imports + Amplify.configure + providers
- Resolved package.json: Kept UI dev's version (includes all Amplify dependencies)
- Auto-merged: Assistant.tsx (JWT code intact), .gitignore
- No functionality lost from either codebase

STATUS: Ready for testing. Both backend and frontend fully integrated.

--- a/ExpoApp/.gitignore
+++ b/ExpoApp/.gitignore
@@ -33,6 +33,9 @@ yarn-error.*
 # local env files
 .env*.local
 
+# AWS credentials (sensitive, should not be tracked)
+aws-exports.ts
+
 # typescript
 *.tsbuildinfo
 
