--- a/ExpoApp/package.json
+++ b/ExpoApp/package.json
@@ -14,9 +14,12 @@
     "@react-native-community/netinfo": "^11.4.1",
     "aws-amplify": "^6.15.7",
     "expo": "~54.0.13",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
