--- a/ExpoApp/package.json
+++ b/ExpoApp/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "aws-amplify": "^6.15.7",
     "expo": "~54.0.13",
+    "expo-av": "^16.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
@@ -22,6 +23,7 @@
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
